--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp sass:watch",
+    "start": "nodemon -e html,css,js ./src"
   },
   "author": "hardeeksharma",
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.5.3",
     "puppeteer": "^2.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.49.0"
   }
 }
